updated installer to be more flexible to changing dependencies

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -1,7 +1,7 @@
 PHON:=headers clean reset scrape unmake remake .reset install uninstall
 .DEFAULT_GOAL:=all
 not=$(if $(1),,true)
-comma:=,
+include .extra/rulemk/char.mk
 sources=$(wildcard *.cpp)
 mk2:=$(wildcard *.mk.2)
 isdep:=$(call not,$(filter nodep,$(MAKECMDGOALS)))
@@ -29,7 +29,7 @@ uninstall:
 	.extra/uninstall
 
 .%.mk: %.cpp
-	.extra/depgen $^
+	.extra/depgen $*
 
 .shared.so: $(patsubst %.cpp,.%.o,$(sources))
 	$(if $^,$(CC) -shared -Wl$(comma)-z$(comma)defs -o .shared.so $^ $(LDLIBS))
