made epoch() 64-bit, made software installable after figuring out it didn't install through testing. redesigned uninstaller to have less redundant code, and am beginning to plan deprecations and updates for the Vector and Array class's output methods

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -12,7 +12,7 @@ endif
 
 headers:
 	.extra/depcheck
-	$(if $(filter-out nodown,$(MAKECMDGOALS)),,cd headers && make)
+	$(if $(filter nodown,$(MAKECMDGOALS)),,cd headers && make All.hpp)
 
 .PHONY: all nodep nodown $(PHON)
 
@@ -29,7 +29,7 @@ install: headers
 uninstall:
 	.extra/uninstall
 
-.%.mk: %.cpp
+.%.mk: %.cpp | headers
 	.extra/depgen $*
 
 .shared.so: $(patsubst %.cpp,.%.o,$(sources))
