modifying installer to be usable for multiple of my own projects more easily

--- a/libs/headers/Makefile
+++ b/libs/headers/Makefile
@@ -4,7 +4,7 @@ All.hpp:
 	.extra/depcheck
 
 clean:
-	$(if $(wildcard All.hpp),rm All.hpp)
+	$(if $(wildcard All.$(H_EXT)),rm All.hpp)
 	$(if $(wildcard .dirhash),rm .dirhash)
 
 reset: clean All.hpp
