--- a/libs/Makefile
+++ b/libs/Makefile
@@ -2,17 +2,17 @@ PHON:=headers clean reset scrape unmake remake .reset install uninstall
 .DEFAULT_GOAL:=all
 not=$(if $(1),,true)
 include .extra/rulemk/helper.mk
-sources=$(wildcard *.cpp)
+sources=$(wildcard *.$(C_EXT))
 mk2:=$(wildcard *.mk.2)
 isdep:=$(call not,$(filter nodep,$(MAKECMDGOALS)))
 
 ifneq ($(if $(MAKECMDGOALS),$(and $(filter-out $(PHON),$(MAKECMDGOALS)),$(isdep)),true),)
- include $(patsubst %.cpp,.%.mk,$(wildcard *.cpp))
+ include $(patsubst %.$(C_EXT),.%.mk,$(wildcard *.$(C_EXT)))
 endif
 
 headers:
 	.extra/depcheck
-	$(if $(filter nodown,$(MAKECMDGOALS)),,cd headers && make All.hpp)
+	$(if $(filter nodown,$(MAKECMDGOALS)),,cd headers && make All.$(H_EXT))
 
 .PHONY: all nodep nodown $(PHON)
 
@@ -29,13 +29,13 @@ install: headers
 uninstall:
 	.extra/uninstall
 
-.%.mk: %.cpp | headers
+.%.mk: %.$(C_EXT) | headers
 	.extra/depgen $*
 
-.shared.so: $(patsubst %.cpp,.%.o,$(sources))
+.shared.so: $(patsubst %.$(C_EXT),.%.o,$(sources))
 	$(if $^,$(CC) -shared -Wl$(comma)-z$(comma)defs -o .shared.so $^ $(LDLIBS))
 
-.static.a: $(patsubst %.cpp,.%.o,$(sources))
+.static.a: $(patsubst %.$(C_EXT),.%.o,$(sources))
 	$(if $(wildcard .static.a),rm .static.a)
 	$(if $^,ar rcs .static.a $^)
 
