--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 *.so
 *.dll
 *.exe
-*.mk
+/libs/*.mk
+/libs/headers/*.mk
 *.mk.2
 /libs/headers/All.hpp
 /libs/headers/.dirhash
 /libs/include
 #next line is discardable in your own forks
 /.gitcred
-/.links
