fixed major bug that had been haunting my project since the start, the include bug, as newly cloned projects were already broken, and now they aren't

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -22,6 +22,9 @@ nodep: #means makefile won't generate dependencies for objects
 
 nodown: #means makefile won't descend into another directory
 
+include: #makes include symlink
+	.extra/symmake
+
 install: headers
 	.extra/install
 	MAKELEVEL=$(MAKELEVEL) make nodown all
